fix button styles

--- a/src/styles/Navigation/NavigationItems.module.scss
+++ b/src/styles/Navigation/NavigationItems.module.scss
@@ -17,6 +17,7 @@
             border: 3px solid transparent;
             color: #99999F;
             font-weight: 500;
+            line-height: 2;
             padding: 2px 15px;
             position: relative;
         }
