add some styles

--- a/src/styles/Sliders/Slider.module.scss
+++ b/src/styles/Sliders/Slider.module.scss
@@ -1,6 +1,11 @@
 .swiperContainer {
-    width: 80%;
     .swiperSlide {
         width: auto;
+    }
+}
+
+.header {
+    h2 {
+        color: white;
     }
 }
