--- a/src/styles/GenersAndMoods/Genre.module.scss
+++ b/src/styles/GenersAndMoods/Genre.module.scss
@@ -1,8 +1,9 @@
 .picture {
-    height: 120px;
+    height: 150px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .card {
     cursor: pointer;
+    margin: 8px;
 }
