--- a/src/styles/Navigation/Navigation.module.scss
+++ b/src/styles/Navigation/Navigation.module.scss
@@ -5,7 +5,8 @@
     background-color: transparent;
     display: flex;
     height: 84px;
-    position: sticky;
+    position: fixed;
     top: 0;
     z-index: 100;
+    width: 100%;
 }
