--- a/src/styles/Carousel/Artist.module.scss
+++ b/src/styles/Carousel/Artist.module.scss
@@ -1,13 +1,13 @@
 .picture {
-    border-radius: 200px;
-    height: 210px;
+    border-radius: 20rem;
+    height: 21rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .name {
     color: white;
     text-align: center;
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: 500;
 }
 
