--- a/src/styles/Carousel/Track.module.scss
+++ b/src/styles/Carousel/Track.module.scss
@@ -6,19 +6,19 @@
 
 .name {
     color: white;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: 400;
-    margin: 8px 0;
+    margin: 0.8rem 0;
 }
 
 .card {
     cursor: pointer;
-    width: 210px;
+    width: 21rem;
 }
 
 .artist_name {
     color: #99999F;
-    font-size: 14px;
+    font-size: 1.4rem;
     font-weight: 200;
-    margin: 3px 0;
+    margin: 0.3rem 0;
 }
