--- a/src/styles/Navigation/Navigation.module.scss
+++ b/src/styles/Navigation/Navigation.module.scss
@@ -4,7 +4,7 @@
     -webkit-backdrop-filter: blur(20px);
     background-color: transparent;
     display: flex;
-    height: 84px;
+    height: 8.4rem;
     position: fixed;
     top: 0;
     z-index: 100;
