--- a/src/styles/Albums/Albums.module.scss
+++ b/src/styles/Albums/Albums.module.scss
@@ -1,6 +1,6 @@
 .box {
     color: white;
-    padding: 0px 160px;
+    padding: 0 16rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -14,5 +14,5 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
 }
