--- a/src/styles/Button/Button.module.scss
+++ b/src/styles/Button/Button.module.scss
@@ -1,12 +1,12 @@
 .button {
-    padding: 6px 15px;
+    padding: 0.6rem 1.5rem;
     line-height: 1.5;
     cursor: pointer;
 }
 
 .outline {
     border: 2px solid;
-    border-radius: 20px;
+    border-radius: 2rem;
 
 
 }
