--- a/src/styles/Carousel/Genre.module.scss
+++ b/src/styles/Carousel/Genre.module.scss
@@ -1,5 +1,5 @@
 .picture {
-    height: 120px;
+    height: 12rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
