--- a/src/styles/GenersAndMoods/Genres.module.scss
+++ b/src/styles/GenersAndMoods/Genres.module.scss
@@ -6,11 +6,11 @@
 }
 
 .box {
-    width: 80vw;
+    width: 85vw;
     margin: 0 auto;
 
     h2 {
         color: white;
-        font-size: 30px;
+        font-size: 3rem;
     }
 }
