--- a/src/index.scss
+++ b/src/index.scss
@@ -17,4 +17,24 @@ a {
 
 html {
   font-size: 62.5%;
+
+  @media(max-width: 576px) {
+    font-size: 60%;
+  }
+}
+
+h2 {
+  font-size: 2.7rem;
+}
+
+h3 {
+  font-size: 1.7rem;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+h5 {
+  font-size: 1.3rem;
 }
