change font size

--- a/src/styles/Button/Button.module.scss
+++ b/src/styles/Button/Button.module.scss
@@ -1,4 +1,5 @@
 .button {
+    font-size: 1.4rem;
     padding: 0.6rem 1.5rem;
     line-height: 1.5;
     cursor: pointer;
@@ -12,5 +13,5 @@
 }
 
 .primary {
-
+    //add primary style
 }
