--- a/src/styles/Playlist/Playlist.module.scss
+++ b/src/styles/Playlist/Playlist.module.scss
@@ -6,7 +6,7 @@
     align-items: center;
 
     table {
-        // font-size: 1.2rem;
+        font-size: 1.4rem;
         width: 100%;
         margin-bottom: 3rem;
         th {
