--- a/src/styles/Carousel/Track.module.scss
+++ b/src/styles/Carousel/Track.module.scss
@@ -1,6 +1,6 @@
 .picture {
-    border-radius: 10px;
-    height: 210px;
+    border-radius: 1rem;
+    height: 20rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
