--- a/src/styles/Playlist/Playlist.module.scss
+++ b/src/styles/Playlist/Playlist.module.scss
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     table {
         font-size: 1.4rem;
@@ -24,6 +25,25 @@
                 height: 4.5rem;
                 border-radius: 0.5rem;
             }
+
+
+            
         }
+    }
+
+}
+
+@media screen and (max-width: 768px) {
+    .box {
+        padding: 2rem 10%;
+        text-align: center;
+    }
+
+    th {
+        text-align: center !important;
+    }
+
+    .moreInfo {
+        display: none;
     }
 }
