--- a/src/styles/Carousel/Styles.module.scss
+++ b/src/styles/Carousel/Styles.module.scss
@@ -1,3 +1,9 @@
 .box {
     margin: 3rem 6rem 6rem 6rem;
 }
+
+@media screen and (max-width: 768px) {
+    .box {
+        margin: 3rem 2%;
+    }
+}
