--- a/src/styles/Header/ArtistHeader.module.scss
+++ b/src/styles/Header/ArtistHeader.module.scss
@@ -27,3 +27,20 @@
         margin: 0;
     }
 }
+
+@media (max-width: 768px) {
+    .box {
+        img {
+            margin-bottom: 2rem;
+        }
+
+        h3 {
+            margin: 0;
+        }
+
+        margin: 5rem 3rem;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+}
