--- a/src/styles/GenersAndMoods/Genre.module.scss
+++ b/src/styles/GenersAndMoods/Genre.module.scss
@@ -7,3 +7,11 @@
     cursor: pointer;
     margin: 1rem;
 }
+
+
+@media screen and (max-width: 768px) {
+    .picture {
+        height: 8rem;
+    }
+
+}
