--- a/src/styles/Panel/Player.module.scss
+++ b/src/styles/Panel/Player.module.scss
@@ -1,3 +1,18 @@
+.container {
+    background-color: rgba(57, 57, 60, 0.9);
+    border-radius: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    width: 98%;
+    height: 7rem;
+    position: fixed;
+    bottom: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    z-index: 1000;
+}
+
 .panel {
     display: flex;
     flex-direction: column;
@@ -62,3 +77,8 @@
     width: 100%;
 }
 
+// @media screen and (max-width: 768px) {
+//     .container {
+//         display: none;
+//     }
+// }
